# fw_ros_ctrl

./: CMakeLists.txt  README.md  environmentVars  guidanceParams  nmpcParams  package.xml  techpodParams
cfg/: control.cfg  fw_ctrl.cfg  guidance.cfg  manual_control.cfg  occlusion_detection.cfg  soft_constraints.cfg  trajectory_generation.cfg
include/: fw_nmpc.h  fw_sim.h  path_manager.h  subs.h
include/fw_nmpc/: fw_nmpc.h  guidance_logic.h  helpers.h  nonlinear_mpc.h  nonlinear_mpc_objectives.h  occlusion_detector.h  trajectory_generator.h
include/fw_nmpc/common/: helpers.h  huber_constraint.h
include/fw_nmpc/guidance/: npfg.h  pwqg.h
launch/: nmpc.launch  nmpc_test.launch  px4.launch  px4_config.yaml  record.launch  record_all.launch  record_nmpc.launch  sim.launch  test.launch
msg/: AcadoVars.msg  AcadoVarsDebug.msg  NMPCAuxOut.msg  NMPCControls.msg  NMPCInfo.msg  NMPCInvPrio.msg  NMPCMeasurements.msg  NMPCObjNRef.msg  NMPCObjRef.msg  NMPCOccDetections.msg  NMPCOnlineData.msg  NMPCStates.msg  NmpcInfo.msg  NmpcObjNRef.msg  NmpcObjRef.msg  NmpcOnlineData.msg  NmpcStates.msg  WindGroundTruth.msg
multiplot/: attitude_lowlevel.xml  controls.xml  generate_horizon_multiplot.py  nmpc_controls.xml  output_errors.xml  polar_velocity.xml  soft_objectives.xml  speeds.xml  unit_ground_vel_ref.xml  wind.xml
params/sim/: environmentVars.yaml  guidanceParams.yaml  nmpcParams.yaml  techpodParams.yaml
rviz/: nmpc_gridmap.rviz
src/: fw_nmpc.cpp  fw_nmpc.h  fw_sim.cpp  guidance_logic.cpp  helpers.cpp  huber_constraint.cpp  latency_testing.cpp  nonlinear_mpc.cpp  nonlinear_mpc_objectives.cpp  occlusion_detector.cpp  trajectory_generator.cpp
src/acado_solver/: acado_auxiliary_functions.c  acado_auxiliary_functions.h  acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  acado_solver_mex.c  acado_solver_sfunction.c  acado_solver_sfunction.h  lsq_objective.c  make_acado_solver.m  make_acado_solver_sfunction.m  model.c
src/common/: helpers.cpp  huber_constraint.cpp
src/guidance/: npfg.cpp  pwqg.cpp
